--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1> <%= yield(:title) %> </h1>
-
-<%= yield %>
-
+  <%= render 'layouts/header' %>
+  <div class = "container">
+    <%= yield %>
+    <%= render 'layouts/footer' %>
+  </div>
 </body>
 </html>
