--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, 'About Us') %>
-
+<div class = "center hero-unit">
+  <h1>About Us</h1>
   <p> Наши контакты</p>
   <ul>
     <li> Телефон: 555 25 32 </li>
     <li> Skype: skype_adress </li>
   </ul>
+</div>
