--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,13 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
-  <div class = "container">
+  <div class = "container" >
+    <% flash.each do |key, value| %><br><br><br>
+    <div class = "alert alert-<%= key %>"><%= value %></div>
+    <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
 </body>
 </html>
