--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
   <%= render 'layouts/header' %>
   <div class = "container" >
-    <% flash.each do |key, value| %><br><br><br>
-    <div class = "alert alert-<%= key %>"><%= value %></div>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "alert alert-#{key}") %>
     <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
