--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -183,3 +183,50 @@ input {
     }
   }
 }
+
+
+/* posts */
+
+.posts {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+.content {
+  h1 {
+    font-size: 1.2em;
+    text-align: left;
+    letter-spacing: -1px;
+    margin-bottom: 3px;
+  }
+  display: block;
+}
+
+.post_title {
+  display: block;
+      font-size: 2em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 5px;;
+      margin-top: 0px;
+}
+.timestamp {
+  color: $grayLight;
+}
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 70px;
+    margin-bottom: 5px solid;
+    color: $gray;
+  }
+}
+
+
