--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<%# user = @user.name %>
+
 <% provide(:title, @user.name) %>
 <div class = "row">
-  <aside class = "span4">
+  <aside class = "span2">
     <section>
       <h1>
         <%= gravatar_for @user, size: 50 %>
@@ -10,4 +10,13 @@
       <%= @user.email %>
     </section>
   </aside>
+  <div class="span10">
+    <% if @user.posts.any? %>
+      <h3>Posts (<%= @user.posts.count %>)</h3>
+      <ol class="posts">
+        <%= render @posts %>
+      </ol>
+      <%= will_paginate @posts %>
+    <% end %>
+  </div>
 </div>
