finished with comments

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
 
     <div class="span8">
       <h3>Post Feed</h3>
-      <%= render 'shared/feed' %>
+      <%= render 'shared/feed' %>text
     </div>
 
   </div>
