--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,9 +5,18 @@
     Posted <%= time_ago_in_words(post.created_at) %> ago.
   </span>
   <% if current_user?(post.user) %>
-    <%= link_to "delete", post, method: :delete,
-                                     data: { confirm: "You sure?" },
-                                     title: post.title %>
+    <%= link_to "delete", post, method: :delete, data: { confirm: "Are you sure?" },title: post.title %>
+  <% end %>
+
+<% @comments = @all_comments.where(post_id: post.id) %>
+<%= render @comments %>
+
+<br>
+  <%= form_for([post, post.comments.build]) do |f| %>
+    <%= f.text_area :content, placeholder: "write your comment here (max 200 symbols)" %>
+    <p>
+      <%= f.submit "Comment it!", class: "btn btn-small" %>
+    </p>
   <% end %>
 </li>
 
