finished with avatars

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,13 @@
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-      <%= gravatar_for user, size: 80 %>
+      <%= 
+         if user.avatar?
+            image_tag user.avatar.url(:thumb)
+         else
+            image_tag "missing.jpeg", size: "100"
+         end
+      %> 
       <%= link_to user.name, user %>
       <% if current_user.admin? && !current_user?(user) %>
       | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
@@ -16,3 +22,4 @@
 </ul>
 
 <%= will_paginate %>
+
