--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,17 @@
 
   <ul>
-    <li>
-    <%= gravatar_for comment.user, size: 50 %>
-    <%= comment.user.name %>
+    <li style = "list-style-type: none" >
+      <%= 
+         if comment.user.avatar?
+            image_tag comment.user.avatar.url(:small)
+         else
+            image_tag "missing.jpeg", size: "50"
+         end
+      %> 
+
+    <span class="user">
+      <%= link_to comment.user.name, comment.user %>
+    </span>
     <span class="timestamp">
       wrote <%= time_ago_in_words(comment.created_at) %> ago.
     </span><br>
