--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,9 +1,15 @@
-<%= link_to gravatar_for(current_user, size: 52), current_user %>
+  <%= 
+     if current_user.avatar?
+        image_tag current_user.avatar.url(:medium)
+     else
+        image_tag "missing.jpeg", size: "300"
+     end
+  %>
 <h1>
   <%= current_user.name %>
 </h1>
 <span>
-  <%= link_to "view my profile", current_user %>
+  <h1><%= link_to "My Blog", current_user %></h1>
 </span>
 <span>
   <%= pluralize(current_user.posts.count, "post") %>
