--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,6 +1,6 @@
-  <div class = "row">
-    <div class = "span6 offset3">
-      <%= form_for @user do |f| %>
+
+
+      <%= form_for @user, :html => {:multipart => true} do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
         <%= f.label :name %>
@@ -14,8 +14,11 @@
 
         <%= f.label :password_confirmation, "Confirm Password" %>
         <%= f.password_field :password_confirmation %>
+
+        <div class='btn-xs'>
+        <%= f.label :avatar, "Upload your avatar" %>
+        <%= f.file_field :avatar %>
+        </div>
         <br>
         <%= f.submit "#{yield(:button)}", class: "btn btn-large btn-primary" %>
       <% end %>
-    </div>
-  </div>
