--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,4 +1,4 @@
-<%= link_to gravatar_for(current_user, size: 52), current_user %>
+<%= image_tag current_user.avatar.url(:thumb) %>
 <h1>
   <%= current_user.name %>
 </h1>
