--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,22 @@
 <% provide(:title,'Edit Profile') %>
 <% provide(:button, 'Save changes') %>
 <h1>Edit your profile</h1>
-<%= render 'user_form' %>
-<%= gravatar_for @user %>
-<a href="http://gravatar.com/emails">change</a>
+<div class="row">
+<div class="span4">
+  <%= 
+     if @user.avatar?
+        image_tag @user.avatar.url(:medium)
+     else
+        image_tag "missing.jpeg", size: "300"
+     end
+  %>
+</div>
+<div class="span6 offset0">
+  <%= render 'user_form' %>
+</div>
+</div>
+
+
+
+
 
