--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,22 @@
 
 <% provide(:title, @user.name) %>
 <div class = "row">
-  <aside class = "span2">
+  <aside class = "span4">
     <section>
-      <h1>
-        <%= gravatar_for @user, size: 50 %>
-        <%= @user.name %>
-      </h1>
-      <%= @user.email %>
+      <%= 
+         if @user.avatar?
+            image_tag @user.avatar.url(:large)
+         else
+            image_tag "missing.jpeg", size: "600"
+         end
+      %> 
+        <h1>
+          <%= @user.name %>
+        </h1>
+        <%= @user.email %>
     </section>
   </aside>
-  <div class="span10">
+  <div class="span8">
     <% if @user.posts.any? %>
       <h3>Posts (<%= @user.posts.count %>)</h3>
       <ol class="posts">
