--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,12 +23,10 @@
   </h1>
     <p>
       <h2>
-        This is the home page for the
-        <a href="http://railstutorial.org/">Ruby on Rails   Tutorial</a>
-        sample application.
+        The test assignment for trainee position at
+        <a href="http://http://sloboda-studio.com/ru/">Sloboda Studio</a>.
       </h2>
     </p>
     <%= link_to "Sign up now", signup_path, class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
 <% end %>
