--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,9 @@
           <%= @user.name %>
         </h1>
         <%= @user.email %>
+        <span>
+          <h1><%= link_to "My Profile", root_path %></h1>
+        </span>
     </section>
   </aside>
   <div class="span8">
