minor fixes, ready to JS

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
 
     <div class="span9">
       <h3>Post Feed</h3>
-      <%= render 'shared/feed' %>text
+      <%= render 'shared/feed' %>
     </div>
 
   </div>
