Ajax works for comment create through render @posts

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -18,7 +18,7 @@
     <div class="comment">
     <%= comment.content %>
     <% if current_user?(comment.user) %>
-      <span class="deleteAction" >удалить</span>
+      <span class="deleteComment" >delete</span>
     <% end %>
     </div>
     </li>
