finished actions for post create/delete using AJAX, but the layout needs refactoring

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,9 @@
 
     <div class="span9">
       <h3>Post Feed</h3>
+      <div id="user_feed">
       <%= render 'shared/feed' %>
+      </div>
     </div>
 
   </div>
