--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,11 +1,11 @@
-<li>
+<li post_id="<%=post.id %>">
   <span class="post_title"><%= post.title %></span>
   <span class="content"><%= post.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(post.created_at) %> ago.
   </span>
   <% if current_user?(post.user) %>
-    <%= link_to "delete", post, method: :delete, data: { confirm: "Are you sure?" },title: post.title %>
+    <span class="deletePost">delete</span>
   <% end %>
 
 
