--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, remote: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <h1> Create a new post: </h1>
   <div class="title_field">
