--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,1 +1,1 @@
-$('#user_feed').html("<%= j render partial: 'shared/feed', locals: {feed_items: @feed_items} %>");
+$('#post_feed').html("<%= j render @posts %>");
