--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,10 +1,20 @@
-<%= image_tag current_user.avatar.url(:thumb) %>
+  <%= 
+     if @user.avatar?
+        image_tag @user.avatar.url(:medium)
+     else
+        image_tag "missing.jpeg", size: "300"
+     end
+  %>
 <h1>
-  <%= current_user.name %>
+  <%= @user.name %>
 </h1>
+
 <span>
-  <%= link_to "view my profile", current_user %>
+  <% unless @user = current_user %> 
+    <%= link_to "back to my profile", current_user %>
+  <% end %>
 </span>
+
 <span>
-  <%= pluralize(current_user.posts.count, "post") %>
+  <%= pluralize(@user.posts.count, "post") %>
 </span>
