post form hided

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<li id="<%= post.id %>" style = "list-style-type: none">
+<li post_id="<%= post.id %>" style = "list-style-type: none">
   <%= image_tag post.user.avatar.url(:small) %>
   <span class="user">
     <%= link_to post.user.name, post.user %>
