--- a/app/views/posts/_post_feed.html.erb
+++ b/app/views/posts/_post_feed.html.erb
@@ -1,5 +1,8 @@
 <% if @posts.any? %>
-  <ul id="post_feed" class="posts">
+  <ul id="post_feed1" class="posts">
     <%= render @posts %>
   </ul>
+
 <% end %>
+
+
