Post#create with AJAX modified

--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -7,5 +7,5 @@
   <div class="field">
     <%= f.text_area :content, placeholder: "Enter the post body..." %>
   </div>
-  <%= f.submit "Post it", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Post it", class: "btn btn-large btn-success" %>
 <% end %>
