--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,3 +1,3 @@
 $('#post_feed').html("<%= j render @posts %>");
-$('#post_form').slideUp(350);
-$('#new_post').show(350);
+$('#post_form').slideUp(200);
+$('#new_post').delay(200).fadeIn(300);
