--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,4 +1,4 @@
   <%= form_for([post, post.comments.build], remote: true) do |f| %>
     <%= f.text_area :content, placeholder: "enter comment here" %>
-    <%= f.submit "Comment!", class: "btn"%>
+    <%= f.submit "Comment!", class: "btn btn-success"%>
   <% end %>
