Carousel owl and bootstrap added, default avatar set

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,9 +1,5 @@
-%li{comment_id: "#{comment.id}", style: "list-style-type: none"}
-  - if comment.user.avatar?                      
-    = image_tag comment.user.avatar.url(:small) 
-  - else                                         
-    = image_tag "missing.jpeg", size: "50"      
-                                          
+%li{comment_id: "#{comment.id}", style: "list-style-type: none"}                   
+  = image_tag comment.user.avatar, size: "50"                                                
   %span.user
     = link_to comment.user.name, comment.user
   %span.timestamp
