--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -2,11 +2,12 @@
   = controller.redirect_to user_path(current_user)
 - else
   .center.hero-unit
-    %h1
-      Welcome to the Sergey's Blog
-    %p
-    %h2
-      The test assignment for trainee position at
-      = succeed "." do
-        %a{:href => "http://http://sloboda-studio.com/ru/"} Sloboda Studio
-    = link_to "Sign up now", signup_path, class: "btn btn-large btn-primary"
+    .well.well-sm
+      = render 'carousel_owl'
+    %section.well.well-sm
+      %h1
+        Welcome to the Sergey's Blog
+      %h2
+      = link_to "Sign up now", signup_path, class: "btn btn-large btn-primary"
+    %section.well.well-sm
+      = render 'carousel_bootstrap'
