--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -3,12 +3,10 @@
 %ul.users
   - @users.each do |user|
     %li
-      - if user.avatar?                          
-        = image_tag user.avatar.url(:thumb)     
-      - else                                     
-        = image_tag "missing.jpeg", size: "100" 
-
-      = link_to user.name, user
+      = image_tag user.avatar, size: "100"
+      = link_to user.name, user 
+      - unless user.last_seen_at.nil? 
+        = " last activity #{time_ago_in_words(user.last_seen_at)} ago"
       - if current_user.admin? && !current_user?(user)
         #{link_to "delete", user, method: :delete, data: { confirm: "You sure?" }}
 
