--- a/app/views/static_pages/_carousel_owl.html.haml
+++ b/app/views/static_pages/_carousel_owl.html.haml
@@ -1,14 +1,22 @@
 %div{id: "carousel_owl", class: "owl-carousel owl-theme"}
   %div.item
-    %img{src: "http://placehold.it/850x500", alt: ""}
+    %img
+      = image_tag 'ajax.jpg', alt: "ajax"
   %div.item
-    %img{src: "http://placehold.it/850x500", alt: ""}
+    %img
+      = image_tag 'bootstrap.jpg', alt: "bootstrap"
   %div.item
-    %img{src: "http://placehold.it/850x500", alt: ""}
+    %img
+      = image_tag 'git.jpg', alt: "git"
   %div.item
-    %img{src: "http://placehold.it/850x500", alt: ""}
+    %img
+      = image_tag 'github.jpg', alt: "github"
   %div.item 
-    %img{src: "http://placehold.it/850x500", alt: ""}
+    %img
+      = image_tag 'haml.png', alt: "haml"
   %div.item
-    %img{src: "http://placehold.it/850x500", alt: ""}
-
+    %img
+      = image_tag 'heroku.png', alt: "heroku"
+  %div.item
+    %img
+      = image_tag 'owl-carousel2.jpg', alt: "owl-carousel2"
