--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,6 +3,7 @@
 - else
   .center.hero-unit
     .well.well-sm
+      For development were implemented:
       = render 'carousel_owl'
     %section.well.well-sm
       %h1
