some minore changes in formatting

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -9,6 +9,10 @@
       %h1
         Welcome to the Sergey's Blog
       %h2
+      %a{href: "https://github.com/SergeyMarushchenko/blog.git"} The source code 
+      of the application on Github
+      %br
+      %br
       = link_to "Sign up now", signup_path, class: "btn btn-large btn-primary"
     %section.well.well-sm
       = render 'carousel_bootstrap'
